[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "memaster"
version = "0.1.0"
description = "Python client for the Memaster cloud memory API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Memaster" }]
keywords = ["memaster", "memory", "ai", "sdk", "client"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/memaster-ai/memaster"
Documentation = "https://docs.memaster.cn"
Dashboard = "https://memaster.cn/dashboard"

[tool.hatch.build.targets.wheel]
packages = ["src/memaster"]
